Issue #1964580 by carks - No help text display Issue #1978260 by eugene.ilyin - Problem with IE8 Issue #1980236 by eugene.ilyin - Wrong size of selectbox for select asset type

--- a/modules/asset_widget/css/asset-widget.css
+++ b/modules/asset_widget/css/asset-widget.css
@@ -1431,6 +1431,7 @@
   padding: 0 7px;
   margin: 0;
   width: 257px;
+  max-width: 257px;
   background: #f5f5f5;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
